Fixed page bleeding

--- a/css/app.css
+++ b/css/app.css
@@ -23,6 +23,7 @@
 .logo-container {
   padding-bottom: 50px;
   padding-top: 50px;
+  overflow: hidden;
 }
 
 .client-pop-up-hover {
