--- a/scss/utilities/_containers.scss
+++ b/scss/utilities/_containers.scss
@@ -20,6 +20,7 @@
 .logo-container {
     padding-bottom: 50px;
     padding-top: 50px;
+    overflow: hidden;
 }
 
 .client-pop-up-hover {
